Fix asserts in the task

--- a/Tasks/task1/Titanic_template.ipynb
+++ b/Tasks/task1/Titanic_template.ipynb
@@ -142,8 +142,8 @@
       "cell_type": "code",
       "source": [
         "# Don't touch this cell\n",
-        "assert \"ticket\" in df.columns\n",
-        "assert \"cabin\" in df.columns\n",
+        "assert \"ticket\" not in df.columns\n",
+        "assert \"cabin\" not in df.columns\n",
         "assert df.isna().sum().sum() == 0"
       ],
       "metadata": {
