--- a/Tasks/task1/Titanic_template.ipynb
+++ b/Tasks/task1/Titanic_template.ipynb
@@ -175,7 +175,7 @@
         "1.   Plots a bar graph of those who survived vs those who did not. \n",
         "2.   Plots a Scatterplot of Survived distribution by Age\n",
         "3.   Plots a bar graph of Class distribution\n",
-        "4.   Plots kernel density estimate of the passengers age separately for all 3 classes\n",
+        "4.   Plots kernel density estimate of the passengers's age separately for all 3 classes\n",
         "5.   Plots a bar graph of passengers per boarding location\n",
         "\n"
       ]
@@ -207,7 +207,7 @@
         "plt.title(\"Class Distribution\")\n",
         "\n",
         "\n",
-        "# plots a kernel density estimate of the subset of the 1st class passangers's age\n",
+        "# plots a kernel density estimate of the passengers's age separately for all 3 classes\n",
         "plt.subplot2grid((2,3),(1,0), colspan=2)\n",
         "plt.title(\"Age Distribution within classes\")\n",
         "\n",
