--- a/Tasks/task2/FashionMnist_template.ipynb
+++ b/Tasks/task2/FashionMnist_template.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "a90ee9e3",
+   "id": "af4b9b8a",
    "metadata": {},
    "source": [
     "# Train NN model on the FashionMNIST data\n",
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "978c14a2",
+   "id": "a60fad90",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5392b308",
+   "id": "33c19eee",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3f5e2720",
+   "id": "605d1835",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b7222502",
+   "id": "f490ddd3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +84,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "43d34704",
+   "id": "16f15225",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dc3cbf83",
+   "id": "bf2a7f78",
    "metadata": {},
    "source": [
     "# Task 1:\n",
@@ -105,14 +105,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e50fa912",
+   "id": "97c9881c",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "3852e3e1",
+   "id": "0695343f",
    "metadata": {},
    "source": [
     "# Task 2:\n",
@@ -123,14 +123,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bc8cd061",
+   "id": "f9b3d73d",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "fbface6d",
+   "id": "e13d5117",
    "metadata": {},
    "source": [
     "# Task 3:\n",
@@ -141,14 +141,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "943205d4",
+   "id": "8cd11bf9",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "a7940240",
+   "id": "605caa5b",
    "metadata": {},
    "source": [
     "# Task 3:\n",
@@ -159,7 +159,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "064a9022",
+   "id": "a724b721",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "087d0fd6",
+   "id": "72d61b00",
    "metadata": {},
    "source": [
     "# Task 4:\n",
@@ -186,17 +186,41 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3c81df9e",
+   "id": "d129cd18",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "8f699bb4",
+   "id": "0bfcc3eb",
    "metadata": {},
    "source": [
-    "# Task 5 (optional):\n",
+    "# Task 5:\n",
+    "\n",
+    "Report confussion matrix for the test set\n",
+    "\n",
+    "Expected format:\n",
+    "```\n",
+    "array([[0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+    "       [0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+    "       [0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+    "       [0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+    "       [0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+    "       [0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+    "       [0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+    "       [0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+    "       [0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+    "       [0., 0., 0., 0., 0., 0., 0., 0., 0., 0.]])\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ba2a7f90",
+   "metadata": {},
+   "source": [
+    "# Task 6 (optional):\n",
     "\n",
     "Train LogisticRegression and DecisionTree models on the same data\n",
     "Compare their performance to the NN"
@@ -205,7 +229,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6b2d0f58",
+   "id": "f009b458",
    "metadata": {},
    "outputs": [],
    "source": []
