--- a/Kostiuchenko_Maryna/task2/FashionMnist_template.ipynb
+++ b/Kostiuchenko_Maryna/task2/FashionMnist_template.ipynb
@@ -526,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 379,
+   "execution_count": 385,
    "id": "aa7d5d68",
    "metadata": {},
    "outputs": [
@@ -539,9 +539,9 @@
     }
    ],
    "source": [
-    "tree_preds = tree.predict(test_dataset_array)\n",
-    "tree_acc = (tree_preds == test_dataset_labels).sum() / len(tree_preds)\n",
-    "print(\"Accuracy of decision tree {:.0f}%\".format(100*tree_acc))"
+    "decision_tree_preds = decision_tree.predict(test_dataset_array)\n",
+    "decision_tree_acc = (decision_tree_preds == test_dataset_labels).sum() / len(decision_tree_preds)\n",
+    "print(\"Accuracy of decision tree {:.0f}%\".format(100*decision_tree_acc))"
    ]
   },
   {
