--- a/Anton Nemirovich/task_3/face_emotions.ipynb
+++ b/Anton Nemirovich/task_3/face_emotions.ipynb
@@ -1946,7 +1946,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# MobileNet"
+        "# Resnet"
       ],
       "metadata": {
         "id": "QvB6zqrQd4Sd"
