--- a/KyselovaMaria/task3/FaceEmotions1.ipynb
+++ b/KyselovaMaria/task3/FaceEmotions1.ipynb
@@ -780,7 +780,7 @@
       "cell_type": "markdown",
       "source": [
         "# Summary\n",
-        "To sum up, frankly speaking, we have got bad results.If we compare results with this data to previous, it's really bad. Because of small difference besides classes in emotions_ds instead of obvious in natural scenes. Moreover, a lot of photos are distributed incorrectly. I suppose that if we add clearer images into dataset and use another pre-trained model (InceptionV3) we'll get better results."
+        "To sum up, frankly speaking, we have got bad results.If we compare results with this data to previous, it's really bad. Because of small difference between classes in emotions_ds instead of obvious in natural scenes. Moreover, a lot of photos are distributed incorrectly. I suppose that if we add clearer images into dataset and use another pre-trained model (InceptionV3) we'll get better results."
       ],
       "metadata": {
         "id": "XnixxESw_Fnu"
